fix: some images not showing fit issues resolved

--- a/src/Components/Shared/LightBox/lightBox.scss
+++ b/src/Components/Shared/LightBox/lightBox.scss
@@ -9,6 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
   &__content {
     max-width: 80%;
     text-align: center;
@@ -27,10 +28,17 @@
       font-weight: 700;
       color: var(--white);
     }
+
     .image-container {
       margin: 20px 0;
-      object-fit: cover;
+      object-fit: contain;
+
+      img {
+        object-fit: contain;
+        width: 100%;
+      }
     }
+
     .image_count {
       font-size: 14px;
       color: var(--pra);
@@ -40,24 +48,29 @@
       font-size: 14px;
     }
   }
+
   &__content-video {
+
     // background-color: var(--title);
     iframe {
       width: 300px;
       height: 200px;
     }
+
     @include breakpoint(sm) {
       iframe {
         width: 400px;
         height: 300px;
       }
     }
+
     @include breakpoint(md) {
       iframe {
         width: 600px;
         height: 400px;
       }
     }
+
     @include breakpoint(lg) {
       iframe {
         width: 800px;
@@ -72,6 +85,7 @@
   display: flex;
   justify-content: space-between;
   position: absolute;
+
   .prev__button,
   .next__button {
     background: transparent;
@@ -80,6 +94,7 @@
     padding: 10px 20px;
     margin: 10px;
     cursor: pointer;
+
     i {
       font-size: 22px;
     }
